[package]
name = "find-wan-ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "3.0.13", features = ["derive"] }